--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,15 @@
         "target": "es6",
         "noImplicitAny": true,
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
         "paths": {
             "*": [
                 "node_modules/*",
-                "src/types/*"
+                "src/types/*",
+				"src/util/*"
             ]
         }
     },
