--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "express-typescript-starter",
+  "name": "when-to-meet",
   "version": "0.1.0",
-  "description": "A starting point for Node.js express apps with TypeScript",
+  "description": "A Typescript & Express app for scheduling group meetings",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/TypeScript-Node-Starter"
+    "url": "https://github.com/aubreypc/when-to-meet"
   },
-  "author": "Bowden Kelly",
+  "author": "Aubrey Collins",
   "license": "MIT",
   "scripts": {
     "start": "npm run serve",
@@ -31,8 +31,11 @@
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "bson": "^4.0.1",
     "compression": "^1.7.1",
     "connect-mongo": "^2.0.0",
+    "cryptiles": "^4.1.3",
+    "deep-extend": "^0.6.0",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
@@ -40,16 +43,20 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "fbgraph": "^1.4.1",
-    "lodash": "^4.17.5",
+    "hoek": "^6.1.2",
+    "lodash": "^4.17.11",
     "lusca": "^1.5.2",
+    "merge": "^1.2.1",
     "mongoose": "^4.13.11",
     "nodemailer": "^4.4.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
+    "randomatic": "^3.1.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "sshpk": "^1.16.1",
     "winston": "^2.4.0"
   },
   "devDependencies": {
@@ -91,4 +98,3 @@
     "tslint": "^5.9.1",
     "typescript": "^2.9.2"
   }
-}
